# incogine

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Incogine.sln  Incogine.vcxproj  Incogine.vcxproj.filters  Info.plist  LICENSE  LICENSE.md  Makefile  README.md  THIRD_PARTY.md
.github/: FUNDING.yml
Incogine-iOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Renderer.h  Renderer.m  SDL_uikit_main.c  ShaderTypes.h  Shaders.metal  main.m
Incogine.xcodeproj/: project.pbxproj
Incogine.xcodeproj/xcshareddata/xcschemes/: Incogine.xcscheme
assets/: icon.ai  logo_black.psd
assets/macOS/AppIcon.iconset/: Contents.json
assets/olds/: logo_white.psd
bundle/android/: AndroidManifest.xml
bundle/ios/: LaunchScreen.storyboard
bundle/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
bundle/macos/: AppIcon.icns
bundle/mobile_icon/ios/AppIcon.appiconset/: Contents.json
bundle/mobile_icon/watchkit/AppIcon.appiconset/: Contents.json
bundle/windows/: resource.rc
platform/XboxOne/: XboxOneToolchain.cmake
src/: credits.xml  main.cpp  project.xml
src/core/: core.cpp  core.hpp
src/core/assets/audio/: audio.cpp  audio.h
src/core/assets/image/: image.cpp  image.h
src/core/components/: components.cpp  components.h
src/core/components/sprite/: sprite.cpp  sprite.h
src/core/components/transform/: transform.cpp  transform.h
src/core/engine/: engine.cpp  engine.h  math.h  version.h
src/core/engine/console/: console.cpp  console.h
src/core/engine/savedata/: savedata.cpp  savedata.h
src/core/fonts/: fonts.cpp  fonts.h
src/core/misc/console/: console.h
src/core/objects/: entity.cpp  entity.hpp  fonts.cpp  fonts.hpp  objects.cpp  objects.h
src/core/objects/components/: collider.cpp  collider.hpp  component.cpp  component.hpp  sprite.cpp  sprite.hpp  transform.cpp  transform.hpp
src/core/objects/cube/: cube.cpp  cube.h
src/core/objects/square/: square.cpp  square.h
src/core/scenes/: scenes.cpp  scenes.h
src/game/: game.cpp  game.hpp
src/glad/: glad.c
src/misc/console/: console.cpp  console.h
src/parser/: crdtory.py  ios_infoplist_gen.py  requirements.txt  svgparse.py  ttfparse.py  ttfparse_main.py
src/project/: script.cpp  script.h
src/project/pausemenu/: pausemenu.cpp  pausemenu.h
src/scenes/: MainScene.cpp  MainScene.h
src/scenes/credits/: Credits.cpp  Credits.h
src/scenes/game/: GameScene.cpp  GameScene.h
src/scenes/splash/: splash.cpp  splash.h
src/web/: init.html
